fix: Allow delete admin accounts except the generic one
